objects/LLC_BI__Scenario_Item__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Balance_Required_Difference__c</fullName>
        <description>This field is automatically calculated via formula. It stores the difference between your minimum required balance and the competitor&apos;s for this bill point.</description>
        <formula>LLC_BI__Competitor_Balance_Required__c - LLC_BI__Balance_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Required Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balance_Required__c</fullName>
        <description>This field is automatically calculated via formula. This field stores the annual dollar amount of the minimum required balance.</description>
        <formula>LLC_BI__Fee_Including_Discounts__c / (LLC_BI__Scenario__r.LLC_BI__Earnings_Credit_Allowance__c / 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Bill_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated whenever a proforma is created. It specifies the bill point associated with the scenario item.</description>
        <label>Bill Point</label>
        <referenceTo>LLC_BI__Bill_Point__c</referenceTo>
        <relationshipLabel>Scenario Items</relationshipLabel>
        <relationshipName>Scenario_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Charge_Difference__c</fullName>
        <description>This field is populated automatically via formula. It stores the difference between the competitor&apos;s fee and your own for a bill point.</description>
        <formula>(LLC_BI__Competitor_Price__c * LLC_BI__Volumes__c) -  LLC_BI__Fee_Including_Discounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Balance_Required__c</fullName>
        <description>This field is populated automatically via formula. It stores the value of the competitor&apos;s minimum required balance for a bill point.</description>
        <formula>(LLC_BI__Competitor_Price__c *  LLC_BI__Volumes__c) / ( LLC_BI__Scenario__r.LLC_BI__Competitor_Earnings_Credit_Allowance__c / 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Balance Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Difference__c</fullName>
        <description>This field is populated automatically via formula. It stores the difference between your fee cost and a competitor&apos;s for a bill point.</description>
        <formula>LLC_BI__Competitor_Fee__c -  LLC_BI__Fee_Including_Discounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Fee__c</fullName>
        <description>This field is populated automatically via formula. It stores the competitor&apos;s fee for the number of volumes in the proforma for a bill point.</description>
        <formula>LLC_BI__Competitor_Price__c *  LLC_BI__Volumes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Price__c</fullName>
        <description>This field is optional. It is populated manually in the proforma. It stores the value of a competitor&apos;s price for a bill point.</description>
        <label>Competitor Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost__c</fullName>
        <description>This field is optional. It is automatically calculated via formula. It stores the total unit cost value by volume number for a bill point.</description>
        <formula>IF(LLC_BI__Volumes__c &gt;0, LLC_BI__Volumes__c * LLC_BI__Bill_Point__r.LLC_BI__Unit_Cost__c, 0)</formula>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Volume__c</fullName>
        <defaultValue>NULL</defaultValue>
        <description>Financial institutions automatically populate this Number field with information using their own system to track current bill point volumes on any given treasury service. By default, the value is null.</description>
        <label>Current Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Discount_Currency__c</fullName>
        <description>This field is populated automatically via formula. It stores the total discount value for a bill point.</description>
        <formula>LLC_BI__Gross_Fee__c - LLC_BI__Fee_Including_Discounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Discount_Percent__c</fullName>
        <description>This field is populated automatically via formula. It stores the total discount percentage for a bill point.</description>
        <formula>IF(LLC_BI__Standard_Price__c != 0, 1 - (BLANKVALUE(LLC_BI__Exception_Price__c, LLC_BI__Standard_Price__c) / LLC_BI__Standard_Price__c), 0)</formula>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exception_Price__c</fullName>
        <description>This field is optional. It is populated manually in the proforma. It stores the value of an exception price for a bill point.</description>
        <label>Exception Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expiration_Date__c</fullName>
        <description>This field indicates the expiration date of the bill point.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Including_Discounts__c</fullName>
        <description>This field is populated automatically via formula. This field contains the total fee amount for a single bill point including discounts.</description>
        <formula>IF((LLC_BI__Exception_Price__c &gt;= 0),

IF((LLC_BI__Scenario__r.LLC_BI__Total_Discount__c &gt; 0),
(LLC_BI__Volumes__c * (LLC_BI__Exception_Price__c - (LLC_BI__Exception_Price__c *LLC_BI__Scenario__r.LLC_BI__Total_Discount__c))),
(LLC_BI__Volumes__c * LLC_BI__Exception_Price__c)),

IF((LLC_BI__Scenario__r.LLC_BI__Total_Discount__c &gt; 0),
(LLC_BI__Volumes__c * (LLC_BI__Standard_Price__c - (LLC_BI__Standard_Price__c * LLC_BI__Scenario__r.LLC_BI__Total_Discount__c))),
(LLC_BI__Volumes__c * LLC_BI__Standard_Price__c )))</formula>
        <label>Fee Including Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fixed_Cost_Total__c</fullName>
        <description>This field is optional. It is automatically calculated via formula. It stores the total fixed unit cost value by volume number for a bill point.</description>
        <formula>IF(LLC_BI__Volumes__c &gt;0, LLC_BI__Volumes__c * LLC_BI__Bill_Point__r.LLC_BI__Fixed_Unit_Cost__c, 0)</formula>
        <label>Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Fee__c</fullName>
        <description>This field is populated automatically via formula. This field contains the value of the gross fees associated with this single product bill point.</description>
        <formula>LLC_BI__Standard_Price__c *  LLC_BI__Volumes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Bundle_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when this scenario item is created to overwrite an existing bill point and it&apos;s standard price.</description>
        <label>Is Bundle Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required. It is manually populated. Currently, this field is a data point which stores whether the scenario item is for a monthly recurring fee.</description>
        <label>Is Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Perm_Waive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required. It is manually populated. Currently, this field is a data point which indicates whether the scenario item is for a permanently waived fee.</description>
        <label>Is Perm Waive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Product_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set automatically via a trigger when the proforma is created. It checks if the associated bill point is associated to a product type.</description>
        <label>Is Product Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Margin_After_Discount__c</fullName>
        <description>This field is automatically calculated via formula. It stores the margin of cost after discounts.</description>
        <formula>LLC_BI__Fee_Including_Discounts__c -  LLC_BI__Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin After Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Margin_Before_Discount__c</fullName>
        <description>This field is automatically calculated via formula. It stores the margin of cost before discounts.</description>
        <formula>LLC_BI__Gross_Fee__c - LLC_BI__Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Required_Balance__c</fullName>
        <description>This field is populated automatically via formula. This field stores the minimum dollar amount that a customer must have in an account for this service based on the earnings credit allowance.</description>
        <formula>IF((LLC_BI__Scenario__r.LLC_BI__Earnings_Credit_Allowance__c &gt; 0),(LLC_BI__Fee_Including_Discounts__c/LLC_BI__Scenario__r.LLC_BI__Earnings_Credit_Allowance__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Required Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Name__c</fullName>
        <description>The product type parent for the scenario item bill point.</description>
        <label>Product Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>This is a required text field that is automatically populated via a trigger when the proforma is created. It looks up to the bill point associated with this record and populates the value with either the LLC_BI__Product__c or LLC_BI__Product_Type__c, depending on which one is populated.</description>
        <label>Product / Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario__c</fullName>
        <description>Contains bill point for the product, volume, pricing and calculations.</description>
        <label>Scenario</label>
        <referenceTo>LLC_BI__Scenario__c</referenceTo>
        <relationshipLabel>Scenario Items</relationshipLabel>
        <relationshipName>Scenario_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Semi_Variable_Cost__c</fullName>
        <description>This field is optional. It is automatically calculated via formula. It stores the total semi-variable unit cost value by volume number for a bill point.</description>
        <formula>IF(LLC_BI__Volumes__c &gt;0, LLC_BI__Volumes__c * LLC_BI__Bill_Point__r.LLC_BI__Semi_Variable_Unit_Cost__c, 0)</formula>
        <label>Semi Variable Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Standard_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is populated automatically via a trigger when the proforma is created. It looks up to the bill point and pulls the standard price.</description>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unit_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is populated automatically via a trigger when the proforma is created. It looks up to the bill point and pulls the unit price.</description>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Volumes__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is optional. It is populated manually in the proforma. It stores the number of units requested for this bill point.</description>
        <label>Volumes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the bill point should be waived for the client.</description>
        <label>Waived</label>
        <type>Checkbox</type>
    </fields>
    <label>Scenario Item</label>
    <nameField>
        <label>Services</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>